manifests/caddy-service.yaml
# caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  namespace: hashibank
spec:
  selector:
    app: caddy-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  type: ClusterIP
